--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "New Tab Example",
+  "name": "Distract Free",
   "version": "0.01",
   "description": "Display on new tab",
   "chrome_url_overrides":{
